Update 'dzypnkbwj-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe:5900bfad72951323ab5aab5f15330eb2acf95b31@sha256:d3c4a7a98baa87efd2b59dc55efd8d87e3a2830e0308f6a21af683cb957ced18

--- a/components/dzypnkbwj-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/dzypnkbwj-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: dzypnkbwj-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:5900bfad72951323ab5aab5f15330eb2acf95b31@sha256:d3c4a7a98baa87efd2b59dc55efd8d87e3a2830e0308f6a21af683cb957ced18
+          name: container-image
